# pockets

./: .coveragerc  .gitignore  .readthedocs.yml  .travis.yml  AUTHORS  CHANGES  LICENSE  MANIFEST.in  README.md  README.rst  requirements.txt  requirements_docs.txt  requirements_test.txt  setup.cfg  setup.py  tox.ini
docs/: Makefile
docs/source/: conf.py  index.rst  pockets.rst
pockets/: __init__.py  _version.py  autolog.py  collections.py  datetime.py  decorators.py  inspect.py  iterators.py  logging.py  string.py
tests/: test_collections.py  test_datetime.py  test_decorators.py  test_inspect.py  test_iterators.py  test_logging.py  test_string.py
tests/deeply/nested/module/: __init__.py
