[bdist_wheel]
universal = 1

[egg_info]
tag_date = false

[easy_install]
zip_ok = True

[aliases]
release = egg_info -RDb ''

[metadata]
description-file = README.rst

[build_sphinx]
source-dir = docs/source
build-dir  = docs/build
all_files  = 1

[tool:pytest]
doctest_optionflags= ELLIPSIS IGNORE_EXCEPTION_DETAIL NORMALIZE_WHITESPACE
