[bdist_wheel]
universal = 1

[egg_info]
tag_date = false

[easy_install]
zip_ok = True

[aliases]
release = egg_info -RDb ''

[metadata]
description-file = README.rst

[build_sphinx]
source-dir = docs/source
build-dir  = docs/build
all_files  = 1

[flake8]
application-import-names=pockets,tests
import-order-style=pep8
ignore=E203,W503

[tool:pytest]
doctest_optionflags= ELLIPSIS IGNORE_EXCEPTION_DETAIL NORMALIZE_WHITESPACE
